# machine-launcher

./: .dockerignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  config.example.toml  openapi.yaml
.github/workflows/: build-tag.yml
backend/: Cargo.toml  README.md  example.toml
backend/jmespath/jmespath/: Cargo.toml
backend/jmespath/jmespath/src/: lib.rs
backend/src/: cmd.rs  drivers.rs  handlers_app.rs  handlers_oauth.rs  lib.rs  main.rs  middlewares.rs
backend/src/drivers/: debug.rs  ipmi.rs  traits.rs  wake_on_lan.rs
frontend/: .envrc  Cargo.toml  index.html
frontend/client/: README.md
frontend/client/.openapi-generator/: FILES
frontend/client/docs/: AppApi.md  AuthApi.md  ErrorMessage.md  Server.md  ServerId.md  ServerName.md
frontend/client/src/apis/: app_api.rs  auth_api.rs  configuration.rs  mod.rs
frontend/client/src/models/: error_message.rs  mod.rs  server.rs  server_id.rs  server_name.rs
frontend/src/: components.rs  main.rs  state.rs
frontend/src/components/: contents.rs  footer.rs  header.rs  server.rs
utils/: Cargo.toml
utils/src/: lib.rs
