[package]
name = "machine-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
envsubst = "0.2.1"
hostname-validator = "1.1.1"
listenfd = "1.0.2"
once_cell = "1.20.3"
openidconnect = { version = "4.0.0", features = [
  "reqwest",
  "accept-rfc3339-timestamps",
] }
ping = "0.5.2"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
rust-ipmi = "0.1.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
time = "0.3.37"
tokio = { version = "1.43.0", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "fs",
] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
wakey = "0.3.0"

[dependencies.jmespath]
path = "./jmespath/jmespath"
version = "*"
features = ["sync"]

[dependencies.machine-launcher-utils]
path = "../utils"
version = "*"
