[package]
name = "machine-launcher-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
uuid = { version = "^1.8", features = ["serde", "v4", "rng-rand"] } # for building Wasm binary
getrandom = { version = "^0.3", features = ["wasm_js"] } # for building Wasm binary
reqwest = "0.12.12"
wasm-cookies = "0.2.1"
wasm-bindgen-futures = "0.4.50"
gloo = "0.11.0"
wasm-timer = "0.2.5"
serde = "1.0.217"
gloo-timers = "0.3.0"
js-sys = "0.3.77"

[dependencies.openapi]
path = "./client"
version = "*"

[dependencies.machine-launcher-utils]
path = "../utils"
version = "*"
